# LogShark

./: Cargo.toml  README.md  build.rs
src/: lib.rs  main.rs
